Bug 127856 - Language popup in Calc's Status bar should affect cell selection's text language, not document language
Summary: Language popup in Calc's Status bar should affect cell selection's text langu...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Henry Castro
URL:
Whiteboard: target:24.8.0
Keywords: bibisected, bisected
: 76750 143015 146855 (view as bug list)
Depends on:
Blocks: Statusbar Languages
  Show dependency treegraph
 
Reported: 2019-09-29 08:48 UTC by andis.lazdins
Modified: 2025-03-22 18:37 UTC (History)
16 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description andis.lazdins 2019-09-29 08:48:07 UTC
Description:
In Libreoffice Calc pushing More... in language selection in Status bar leads to Language settings from Tools > Options menu instead of Format > Cells menu as should be (e.g. it works in Writer).

Steps to Reproduce:
1. Open or create Calc file
2. In Status bar push on Language selection
3. Push More...

Actual Results:
Language settings from Tools > Options appears to select interface language.

Expected Results:
Cell properties from Format > Cells > Font should appear to select language of text in selected cells.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.3.2.2
Build ID: 98b30e735bda24bc04ab42594c85f7fd8be07b9c
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: lv-LV (en_GB.UTF-8); UI-Language: en-US

The same appears in Version 6.2.7.1
Comment 1 Xisco Faulí 2019-09-30 11:05:25 UTC
The current behaviour was implemented in https://cgit.freedesktop.org/libreoffice/core/commit/?id=6db709ba79fec6f75dd7385ce57c65a62fc2254e

@UX Team, what's your opinion on this ??
Comment 2 Heiko Tietze 2019-10-01 08:15:01 UTC
Looks like cell language is not the same as text language since I can set both independently. Eike, could you please add some wisdom here?
Comment 3 Eike Rathke (retired, only occasionally showing up) 2019-10-01 12:22:54 UTC
The font language is a text attribute and affects spell-checking and the like.
The number format language (locale) affects only the number format.

The status bar setting the global document language (like choosing "[None]") or More... raising the Tools -> Options -> Language Settings -> Languages dialog IMHO is completely wrong.
Changing "Default Languages for Documents" there leads to setting all cells' default font language (if not set differently already).
Changing "Language Of","Locale setting" there leads to setting all cells' default number format locale (if not set differently already).
The status bar language displays the global Western "Default Languages for Documents", also when changed it's updated only after some other action.

However, according to the tooltip ("Text Language. ... character or paragraph language") picking a language from the context menu should attribute the font language of the selected cell(s), and More... should raise the Format -> Cells (Ctrl+1) dialog with tab Font.
Comment 4 Thomas Lendo 2019-10-02 20:17:45 UTC
I support a change so that it opens Format > Cells dialog in font tab similar to the behavior in Writer.

It seems in general that the language identification needs some love in Calc like Bug 76750, Bug 34142, Bug 63558 and Bug 121700.
Comment 5 Cor Nouws 2019-10-03 12:02:30 UTC
It looks as if my friend @hcastro missed the difference when making the [more] button work.
Changing the behavior to be in line with Writer is, esp after previous comments, a nobrainer to me :)
Comment 6 Henry Castro 2019-10-03 16:27:18 UTC
Hi,

>> Changing the behavior to be in line with Writer is, esp after previous comments

Yes, I did with Online to send same data on uno:Commands but it is not. I will fix the desktop version, without affecting the Online :)
Comment 7 Timur 2019-10-25 09:06:56 UTC
I was looking for the explanation in bug 100136 and arrived here. Now with Eike's explanation, I get it. But we should have language and consequences (like spelling and hyphenation) explained in Help, best after this bug is resolved. 
Lesson learned is that bug 113911 was wrongfully set to New without UX eval. Logic is not "I reproduce" but "Yes, there's a reason it should be changed".
What's missing here now is a clear "expected" situation, Heiko please write it, using Eike's comment and Thomas' bugs.
Comment 8 Heiko Tietze 2019-11-01 11:30:09 UTC
Issue: "More..." in content menu at language panel in the status bar leads to Tools > Options > Language unlike Writer that goes to the character dialog (would be Cell in case of Calc).

Related topics: In bug 76750 a main menu item is requested to change the language, bug 34142 deals with document, sheet, and cell wide language settings like Writer has, summary of bug 63558 is about auto detection in Draw but deals with the same as 34142, and bug 121700 is a duplicate of this but talking about paragraphs and characters.

Technically, the language (locale) affects both text (spell-checking, hyphenation etc) and numbers (separators, currency etc.). Users compare Calc with Writer and might expect only text being affected, which is supported by the item "None (do not check spelling)". In other scenarios the user wants to change the number format or currency in the sheet.

Tools -> Options -> Language Settings changes the whole document (and newly created), switching the language per content menu at the status bar affects the current document, and Format > Cells: Font applies to the selection.
The status bar shows the document language and not the actual cell.
There are settings for Numbers and Font in the cells property dialog so a cell can have two languages (locales).

Proposal: 
1. We split the status bar into number format and text language. Having "(English (USA)" twice is not perfectly clear to the user and maybe we should use "English (USA)" and "$1.234,00"
2. "More..." opens Format > Cell: Font and :Number respectively.
3. The context menu root entries apply to the selection.
4. We add another context menu entry "Set language for the document >" with the current content and functionality (like Writer has this for the paragraph). 
5. We add the same structure to the main menu at Tools > Language and (5b) consequently another entry with Numbers.

This goes way too far and we better exclude the numbers configuration. Meaning, the context menu just alters Format>Cell>Font and not the locale. So ignore #1 and 5b.

6. The language of the currently active cell is used for the status bar text.
Comment 9 Henry Castro 2020-01-15 12:49:56 UTC
Hi,

I am sorry, fixing this bug, I have tasks assigned to Online, so Please if there is another member to take the bug, I will appreciate :)
Comment 10 Xisco Faulí 2020-01-22 09:13:48 UTC
Hi Caolán,
I thought you might be interested in this issue
Comment 11 QA Administrators 2022-08-15 03:44:10 UTC Comment hidden (noise, obsolete)
Comment 12 andis.lazdins 2022-08-15 04:42:15 UTC Comment hidden (obsolete)
Comment 13 Eike Rathke (retired, only occasionally showing up) 2022-08-15 13:11:23 UTC
(In reply to andis.lazdins from comment #12)
> Works as supposed, in the same way in Calc and Writer.
Nope, it's still wrong, it also doesn't do the same. For Calc it leads to Tools -> Options -> Language Settings -> Languages, and the status bar indicator does not match either number format locale nor the text language of the current/selected cell(s) but the default document language instead, also picking a language from the context menu changes that default document language but not of the current/selected cell(s) if that was already something different.
Comment 14 Henry Castro 2022-08-15 13:19:08 UTC
Checking ...
Comment 15 andis.lazdins 2022-08-15 13:22:29 UTC
Yes, I was wrong. I just switched between languages already available in the list and it looked ok. When I pushed More... now, it led to Language selection in Tools.
Comment 16 Henry Castro 2022-08-18 15:19:33 UTC
Hi,

can you please verify expected results for https://gerrit.libreoffice.org/c/core/+/138499 patch?
Comment 17 Commit Notification 2022-10-03 13:43:35 UTC
Henry Castro committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/161e8c63a5175a634b3ddaea4314e335b290a298

tdf#127856: sc: Status bar "languages" when you click...

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 V Stuart Foote 2022-11-27 10:57:26 UTC
@Heiko, *

UX Feedback on Henry's patch did not get done, and UX suggestions comment 8 were not fully addressed. 

So currently in master against 7.5 the Status bar's Text language field's 'More..' dialog now responds by opening the 'Format Cells' dialog on the Font tab, as for summary. And from there the cell/paragraph language can be set.

However it does not fully solve the ask, which was to have the Status bar in Calc behave the same as in Writer and to *display* the Text language for the selected or cursor focused paragraph or Table cell.

Instead Calc status bar continues to show the global document's default language setting.

We've pushed/duped a number of issues for better language handling to bug 103036, but here adjusting language of the Calc status bar to be consistent with paragraph and table cell handling in Writer remains an issue. Reopen this, or add to the laundry list there so it does not get lost?
Comment 19 Heiko Tietze 2022-11-28 09:13:35 UTC
(In reply to V Stuart Foote from comment #18)
> Reopen this, or add to the laundry list there so it does not get lost?

It opens the cell dialog but not at the Font tab. Would bring this up as a follow-up issue (unless Henry is around and reopen the ticket himself planning to work on it).

I also have trouble to decipher Eike's comment 13...
Comment 20 Henry Castro 2022-12-15 11:42:57 UTC
No problem I will resolve the issue
Comment 21 Henry Castro 2022-12-20 12:31:55 UTC
>> It opens the cell dialog but not at the Font tab. Would bring this up as a
>> follow-up issue

can you please provide me images or screen cast how should look?, I did not understand it.

meanwhile I will resolve the 

>> Instead Calc status bar continues to show the global document's default
>> language setting.
Comment 22 stragu 2023-11-27 09:40:11 UTC
*** Bug 143015 has been marked as a duplicate of this bug. ***
Comment 23 stragu 2023-11-27 09:48:38 UTC
Because the solution suggested is more general and applies to the whole status bar popup, I'm changing the summary.
* picking a language should change the cell section's text language
* clicking "More..." should always lead to the Font tab in the Format Cells dialog

This would ideally be fixed alongside the language display in status bar, tracked in bug 34142, and the top menu behaviour, tracked in bug 76750.
Comment 24 Heiko Tietze 2023-12-05 12:49:13 UTC
*** Bug 76750 has been marked as a duplicate of this bug. ***
Comment 25 Commit Notification 2024-01-05 17:14:45 UTC
Henry Castro committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fbbad70b9437aa2e96f004c530f2d552715cf810

tdf#127856: fix cell selection language

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 26 stragu 2024-01-08 14:06:40 UTC
Henry, I just tested in:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e83c7ec2f4d801365235bf56d7cc8cf31ef4a00e
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

The language does change when switching to a different language in the status bar (change visible in context menu > format cells > font).

However:
- it doesn't work if using "None (do not check spelling)", which still changes the document's language
- the status bar still only show the whole document's language – do you plan to submit a patch for bug 34142?
Comment 27 Henry Castro 2024-01-09 12:11:16 UTC
>> The language does change when switching to a different language in the status bar
>> (change visible in context menu > format cells > font).

Thanks for testing

>> it doesn't work if using "None (do not check spelling)", which still changes the
>> document's language

If using 'None..', what actions should do? I can improve it.

>> the status bar still only show the whole document's language – do you plan to submit a
>> patch for bug 34142?

Yes, I can do it to show the current cell selection language or cursor position in status bar
Comment 28 stragu 2024-01-09 12:57:46 UTC
(In reply to Henry Castro from comment #27)
> Thanks for testing
Pleasure! :)

> If using 'None..', what actions should do? I can improve it.
The same as going Right-click > Format cells > Font > Language: [None]

> Yes, I can do it to show the current cell selection language or cursor
> position in status bar
Thanks, much appreciated!
Comment 29 Commit Notification 2024-01-26 18:41:52 UTC
Henry Castro committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/64e1a5916367644ad3883a24ab1630d1340603b3

tdf#127856: fix setting "None" in cell format language

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 30 Buovjaga 2024-02-01 16:21:27 UTC
Can this be closed as fixed now?
Comment 31 andis.lazdins 2025-01-09 06:00:29 UTC
(In reply to Buovjaga from comment #30)
> Can this be closed as fixed now?

Yes, for me it is solved.

Version: 25.2.0.1 (X86_64) / LibreOffice Community
Build ID: ddb2a7ea3a8857aae619555f1a8743e430e146c9
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: lv-LV (en_US.UTF-8); UI: en-US
Calc: CL threaded
Comment 32 Aron Budea 2025-03-22 18:36:58 UTC
*** Bug 146855 has been marked as a duplicate of this bug. ***