tdf#127856: sc: Status bar "languages" when you click...

the popup "More.." button it will show the format cells dialog.

Signed-off-by: Henry Castro <hcastro@collabora.com>
Change-Id: Idb60decf1c582c906d24d10fc248cfd20f8f4cbf